web/themes/custom/usagov/sass/_uswds-theme-custom-styles.scss
/* ... */
#block-emergencyheaderbanner .usa-alert--error {
  // These styles are needed to position the alert icon
  &::before {
    display: none;
  }

  .usa-alert__body {
    position: relative;

    &::before {
      background: url("../assets/img/usa-icons/error.svg") no-repeat center/2rem 2rem;
      width: 2rem;
      content: "";
      display: block;
      height: 3.5rem;
      position: absolute;
      left: 1.6rem;
      top: -0.6rem;
      background-color: var($off-black);
      mask: url("../assets/img/usa-icons/error.svg") no-repeat center/2rem 2rem;
      background-size: 1.5rem;

      // height: 2.5rem;
      // width: 1.5rem;
      mask-size: 1.5rem;

      @media (max-width: 1022px) {
        left: 0.4rem;
      }
    }
  }
}

#block-usagov-content .font-serif-lg {
  // This style is needed to set the font size of intro text
  font-size: 1.5rem;
}

.desktop\:grid-col-fill .content-wrapper {
  // On Navigation Cards pages, display the content in reverse order. So the Nav banner is displayed above the Intro Text.
  display: flex;
  flex-direction: column;
}

// This style is needed to extend the width of nav page intro text
.desktop\:grid-col-fill .usa-prose>p.usa-intro {
  max-width: 81ex;
  margin-left: 1.2ex;
  margin-right: 1.2ex;
}

@media (max-width: 30em) {
  .usa-alert,
  .usa-prose,
  .usa-table,
  .usa-form,
  .usa-radio__label,
  .usa-footer,
  .usa-nav .usa-accordion,
  .usa-accordian__heading,
  .text-primary-lighter,
  .usa-hero,
  .usa-identifier,
  .usa-label {
    font-size: 1.1rem;
  }
}

.desktop\:grid-col-8 .body-copy {
  // Add margin only on content pages
  margin-top: 2.5rem;
}

.usa-skipnav:active,
.usa-skipnav:hover {
  color: var($text-blue);
}

.usa-skipnav:visited {
  color: var($dark-gray);
}

#back-to-top {
  position: fixed;

  // float:right;
  height: 50px;
  width: 90px;
  right: -100px;
  bottom: 80px;
  background: var($off-white);
  transition: right 0.5s;
  background-image: url("/themes/custom/usagov/images/Icon_Back_to_Top_Blue.png");
  background-size: 45px;
  background-position: 2px;
  background-repeat: no-repeat;
  padding: 0 15px 0 50px;
  border-radius: 25px 0 0 25px;
  line-height: 50px;
  display: inline-block;
  text-align: center;
  z-index: 1;

  &.stuck {
    right: 0;
  }
}

// Last Updated, Share and Survey
.additional_body_info {
  padding-top: 75px;
}

// Share This Page
div #sm-share {
  display: flex;
  padding-bottom: 22px;
  background-color: transparent;
  font-size: var($smaller-text-font-size);
}

#share-page {
  margin-top: auto;
  margin-bottom: auto;
}

div #sm-share a {
  text-decoration: none;
}

.share-icons {
  margin-left: 10px;
  height: 44px;
  line-height: 44px;
  display: flex;
}

.share-icon {
  margin: 6px;
  width: 32px;
  height: 32px;
  color: #1b1b1b;
  display: block;
}


// error styles for elected officials

.usa-error {
  color: var($red-error);
  font-weight: 600;
}

.usa-user-error {
  border-color: var($red-error);
  border-width: 3px;
  border-style: solid;
}

input:not([disabled]):focus.usa-user-error {
  outline-offset: 1px;
}

.usa-main-border-error {
  border-left: 3px solid var($red-error);

  .usa-border-error {
    border-left: none;
  }
}

.usa-border-error {
  border-left: 3px solid var($red);
}

.usa-form-spacing {
  padding-left: 1rem;
}

#myform div.margin-x-auto {
  // margin-left: 3rem;
  @media (max-width: 40em) {
    margin-left: .2rem;
    margin-right: 1rem;
  }
}

#myform div.maxw-mobile {
  max-width: 26rem;
}

/**
#myform.usa-form .usa-input, #myform .usa-combo-box__input {
  max-width: 20rem;
}
*/

.ceo-button-container {
  display: flex;
  // Manages where the button is going to be positioned.
  // Example: center, right, left.
  justify-content: center;
}

.ceo-button {
  margin-inline: 0 !important;
}

.usa-error--alert {
  display: none;
}

.currentMenuItem {
  position: relative;
}

.currentMenuItem::after {
  background-color: var($cyan-30v);
  border-radius: 0;
  content: "";
  display: block;
  position: absolute;
  height: 0.25rem;
  left: 1rem;
  right: 1rem;
  bottom: 0;
}

// scams reskin

.block-wizardenglish {
  background-color: var($light-gray);
  border-top: 4px solid var($deep-blue);
  padding-top: 2rem;
  padding-left: 3rem;
  padding-right: 2rem;

  @media (max-width: 64em) {
    padding-left: 2rem;
  }
}

@media (min-width: 64em) {
  .block-wizardenglish {
    margin-left: 5rem;
    max-width: 80%;
  }
}

.block-wizardenglish div.usa-prose h1 {
  color: var($deep-blue);
  padding-bottom: 1.5rem;
  margin-top: 0;
  font-size: 2.25rem;

  @media (max-width: 40em) {
    font-size: 2rem;
  }
}

.block-wizardenglish div.usa-prose h1.usa-wizard-title {
  padding-bottom: 0;
}

.block-wizardenglish div.usa-prose h1 .usa-pros {
  padding-bottom: 1rem;
}

.block-wizardenglish .usa-prose {
  font-size: 1.2rem;
}

.block-wizardenglish .usa-button {
  color: var($off-black);
  background-color: var($cyan-light);

  @media (max-width: 40em) {
    margin-bottom: 8px;
  }
}

.block-wizardenglish .usa-prose>p.usa-scam-label {
  max-width: 110ex;
  padding-bottom: 0.2rem;
  margin-bottom: 1rem;
}

.block-wizardenglish .usa-scam-label {
  border-bottom: 1px solid gray;
  color: var($dark-blue);
  font-weight: 500;
}

button#prior.usa-button--outline {
  background-color: var($white);
  box-shadow: inset 0 0 0 2px var($black);
}

button#next.usa-button,
.block-wizardenglish a.usa-button {
  background-color: var($cyan-light);
  box-shadow: inset 0 0 0 2px var($cyan-50v);
}

button#next.usa-button:hover,
.block-wizardenglish a.usa-button:hover {
  background-color: var($secondary-background-color);
}

.block-wizardenglish .usa-prose>p {
  max-width: 110ex;
}

.block-wizardenglish .usa-radio__input--tile:checked+[class*="__label"] {
  background-color: var($cyan-light);
}

.wizard_error {
  border-left: 3px solid var($red-error);
  padding-left: 5px;
}

.block-wizardenglish div.usa-error {
  padding-left: 5px;
  padding-right: 5px;
}
/* ... */

